--- a/Watchlist/Base.lproj/Main.storyboard
+++ b/Watchlist/Base.lproj/Main.storyboard
@@ -20,36 +20,94 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Slice 1" translatesAutoresizingMaskIntoConstraints="NO" id="IyP-3z-CmV">
                                 <rect key="frame" x="180" y="170" width="240" height="128"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="d7A-zI-Igs"/>
-                                    <constraint firstAttribute="height" constant="128" id="grZ-s6-LCG"/>
+                                    <constraint firstAttribute="height" constant="128" id="GjD-9Q-cDQ"/>
+                                    <constraint firstAttribute="width" constant="240" id="sgd-dG-OXl"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zfF-cs-f8k">
+                                <rect key="frame" x="190" y="180" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Search TV Show, or Movie" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cDk-WZ-j3O">
                                 <rect key="frame" x="188" y="326" width="224" height="30"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" searchField="YES"/>
                                 </accessibility>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="hBa-iA-FIq"/>
-                                    <constraint firstAttribute="width" constant="224" id="woo-Ne-K3Q"/>
+                                    <constraint firstAttribute="height" constant="30" id="WoU-aq-HwN"/>
+                                    <constraint firstAttribute="width" constant="224" id="wLK-hm-vkH"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="searchTextDidChange:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="ZyG-tq-Sjt"/>
+                                </connections>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WRM-hh-Kbs">
+                                <rect key="frame" x="276" y="401" width="48" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Kbb-ij-Ax9"/>
+                                    <constraint firstAttribute="width" constant="48" id="SPE-1k-ike"/>
+                                </constraints>
+                                <state key="normal" title="Search"/>
+                                <connections>
+                                    <segue destination="LfE-oh-iqe" kind="show" identifier="searchSegue" id="5Xj-xh-8aY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="IyP-3z-CmV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="150" id="ONI-tj-gG1"/>
-                            <constraint firstItem="IyP-3z-CmV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UGd-wE-HYt"/>
-                            <constraint firstItem="cDk-WZ-j3O" firstAttribute="top" secondItem="IyP-3z-CmV" secondAttribute="bottom" constant="28" id="c7H-dG-F8X"/>
-                            <constraint firstItem="cDk-WZ-j3O" firstAttribute="centerX" secondItem="IyP-3z-CmV" secondAttribute="centerX" id="e47-U7-DeS"/>
-                            <constraint firstItem="IyP-3z-CmV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="150" id="ku7-Ae-3g9"/>
+                            <constraint firstItem="WRM-hh-Kbs" firstAttribute="top" secondItem="cDk-WZ-j3O" secondAttribute="bottom" constant="45" id="6fK-rq-3Hj"/>
+                            <constraint firstItem="cDk-WZ-j3O" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ENK-US-wMN"/>
+                            <constraint firstItem="cDk-WZ-j3O" firstAttribute="top" secondItem="IyP-3z-CmV" secondAttribute="bottom" constant="28" id="JNU-bd-Qgl"/>
+                            <constraint firstItem="IyP-3z-CmV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="R2C-m6-kHi"/>
+                            <constraint firstItem="WRM-hh-Kbs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Wsd-HV-COm"/>
+                            <constraint firstItem="IyP-3z-CmV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="150" id="hpv-w7-j89"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="searchButton" destination="WRM-hh-Kbs" id="Cp7-pM-tTh"/>
+                        <outlet property="searchText" destination="cDk-WZ-j3O" id="zUF-i1-QGK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="345" y="339"/>
+            <point key="canvasLocation" x="347" y="584"/>
+        </scene>
+        <!--Result View Controller-->
+        <scene sceneID="sxw-oF-KqN">
+            <objects>
+                <viewController id="LfE-oh-iqe" customClass="resultViewController" customModule="Watchlist" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yrq-9Z-IF4"/>
+                        <viewControllerLayoutGuide type="bottom" id="F4p-w7-JJA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="agQ-jn-Bbd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YEJ-in-qv5">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="mqg-ve-tpn"/>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIt-CQ-BLt">
+                                <rect key="frame" x="279" y="73" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="resultLabel" destination="HIt-CQ-BLt" id="KQU-aX-515"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5ME-ug-AAf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1101" y="584"/>
         </scene>
     </scenes>
     <resources>
